--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="padded col-6-middle">
             <h2>so <span class="featured-text"> soft </span> you'll melt</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse asperiores ducimus, perspiciatis similique dolorum quidem beatae repellendus veritatis tempora, ab amet autem natus facere corrupti magni alias placeat molestias ullam!</p>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse asperiores ducimus, perspiciatis similique dolorum quidem beatae repellendus veritatis tempora, ab amet autem natus facere corrupti magni alias placeat molestias ullam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse asperiores ducimus, perspiciatis similique dolorum quidem beatae repellendus veritatis tempora, ab amet autem natus facere corrupti magni alias placeat molestias ullam! </p>
         </div>
     </section>
 
@@ -111,9 +111,9 @@
         </div>
         <div class="col-5-bottom">
            <p> <strong>Call:</strong> <a href="tel:"> 555-555-5555 </a> </p>
-           <p> <strong></strong>Email:</strong> <a href="mailto:#">hello@thesleep.co </a> </p>
-           <p> <strong></strong>Store:</strong> 55 Main St, Chicago </p>
-           <p> <strong></strong>Instagram:</strong> <a href="https://www.instagram.com.thesleepco">@thesleepco </a> </p>
+           <p> <strong>Email:</strong> <a href="mailto:#">hello@thesleep.co </a> </p>
+           <p> <strong>Store:</strong> 55 Main St, Chicago </p>
+           <p> <strong>Instagram:</strong> <a href="https://www.instagram.com.thesleepco">@thesleepco </a> </p>
         </div>
 
     </footer>
