--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="padded grid text-center tall-100">
         <div class="col-12-middle">
         <h3 class="fontweight-extra-bold"> <span class="featured-text"> sleep </span> like a baby </h3>
-        <h1 class="fontweight-normal">the ultimate matress solution</h1>
+        <h1 class="fontweight-norma">the ultimate matress solution</h1>
         </div>
     </header>
 
